<resources>
    <string name="app_name">BeatFlow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_placeholder">Username</string>
    <string name="user_description_placeholder">User Description</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="your_playlists">Your Playlists</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="logout">Logout</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="guest">Guest</string>
    <string name="select_picture">Select Picture</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_created">Playlist "%s" created</string>
    <string name="error_creating_playlist">Error creating playlist</string>
    <string name="error_uploading_image">Error uploading image</string>
    <string name="profile_image_updated">Profile image updated</string>
    <string name="error_updating_profile_image">Error updating profile image</string>
    <string name="error_loading_playlists">Error loading playlists</string>
    <string name="clicked_playlist">Clicked on playlist: %s</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="save">Save</string>
    <string name="no_playlists">No Playlists</string>
    <string name="playlist_image">Description of the playlist image</string>
    <string name="song_hint">Song Name</string>
    <string name="artist_hint">Artist Name</string>
    <string name="edit_profile_info">Edit Profile Info</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="user_profile_image_description">User profile image</string>
    <string name="song_count">%d songs</string>
    <string name="no_results_found">No results found</string>
    <string name="search_hint">Search...</string>
    <string name="filter">Filter</string>
    <string name="search_playlists">Playlists</string>
    <string name="search_results_count">נמצאו %d תוצאות</string>

    <string name="error_loading_users">Failed to load users. Please try again.</string>
</resources>